[package]
name = "ecbokio"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
http = "1.3.1"
mime = "0.3.17"
multipart = { version = "0.18.0", default-features = false, features = ["client"] }
rpassword = "7.4"
rust_decimal = { version = "1.37.2", features = ["serde_json", "serde-with-float"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["float_roundtrip"] }
ureq = { version = "3.0.12", features = ["json"] }
